More work on AXIS-2882.